crates/rstest-bdd/tests/fixtures_macros/scenario_out_of_order.stderr
error: No matching step definition found for 'Given a step'
 --> tests/fixtures_macros/scenario_out_of_order.rs:3:1
  |
3 | #[scenario(path = "../features/macros/ambiguous.feature")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `scenario` (in Nightly builds, run with -Z macro-backtrace for more info)
